@@ -247,9 +247,7 @@
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
                                 <arg>--add-modules</arg>
-                                <arg>ALL-DEFAULT</arg>
-                                <arg>--add-reads</arg>
-                                <arg>javafx.swt=org.eclipse.swt.cocoa.macosx.x86_64</arg>
+                                <arg>org.eclipse.swt.cocoa.macosx.x86_64</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -276,9 +274,7 @@
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
                                 <arg>--add-modules</arg>
-                                <arg>ALL-DEFAULT</arg>
-                                <arg>--add-reads</arg>
-                                <arg>javafx.swt=org.eclipse.swt.gtk.linux.ppc64le</arg>
+                                <arg>org.eclipse.swt.gtk.linux.ppc64le</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
@@ -304,9 +300,7 @@
                             <encoding>${project.build.sourceEncoding}</encoding>
                             <compilerArgs>
                                 <arg>--add-modules</arg>
-                                <arg>ALL-DEFAULT</arg>
-                                <arg>--add-reads</arg>
-                                <arg>javafx.swt=org.eclipse.swt.win32.win32.x86_64</arg>
+                                <arg>org.eclipse.swt.win32.win32.x86_64</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
